fixed dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,11 @@
   /* --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255; */
-  background: rgb(0, 21, 41);
+  background: rgb(255, 255, 255);
  
+}
+.dark{
+  background: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
